; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_dso.c_atomic_init_func.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_dso.c_atomic_init_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dso_pool = common dso_local global i32 0, align 4
@dso_mutex = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@dso_cache = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32*)* @atomic_init_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @atomic_init_func(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = call i32 @svn_pool_create(i32* null)
  store i32 %5, i32* @dso_pool, align 4
  %6 = load i32, i32* @TRUE, align 4
  %7 = load i32, i32* @dso_pool, align 4
  %8 = call i32 @svn_mutex__init(i32* @dso_mutex, i32 %6, i32 %7)
  %9 = call i32 @SVN_ERR(i32 %8)
  %10 = load i32, i32* @dso_pool, align 4
  %11 = call i32 @apr_hash_make(i32 %10)
  store i32 %11, i32* @dso_cache, align 4
  %12 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %12
}

declare dso_local i32 @svn_pool_create(i32*) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_mutex__init(i32*, i32, i32) #1

declare dso_local i32 @apr_hash_make(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
